some improvements from review
